# pyami_asterisk

./: .gitchangelog.rc  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: bandit.yml  ci.yml  coverage.yml  pylint.yml  release.yml
docs/source/: conf.py
pyami_asterisk/: __init__.py  client.py  utils.py
tests/: test_client.py
tests/fixtures/: actions.txt  actions_response.txt  login_failed.txt  login_ok.txt
