[metadata]
name = pyami_asterisk
version = attr: pyami_asterisk.__version__
description = pyami_asterisk is a library based on python’s AsyncIO with Asterisk AMI
url = https://github.com/streltsovdenis/pyami_asterisk
author = Denis Streltsov
email = sdv.streltsov@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_expression = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Communications :: Telephony
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

keywords =
    AMI
    Asterisk
    asyncio

[options]
python_requires = >= 3.7
install_requires =
    loguru==0.6.0

packages = find:

[options.packages.find]
exclude =
    examples*
    docs*
    tests*

# extra deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
doc =
    sphinx
    sphinx_git
    recommonmark
    sphinx_rtd_theme
    sphinxcontrib-apidoc
test =
    pytest==6.2.5
    pytest-cov
    pytest-asyncio==0.16.0
cov =
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    tests

max-line-length = 90
